# game-engine

./: .gitmodules  README.md
c++/: .gitignore  Makefile  main.cc
c++/engine/: engine.h  (+4 more)
docs/: collider.html  decorators.html  engine.html  game-event.html  game-utility.html  index.html  package-lock.json  package.json  resources.html  room.html  shapes.html  tiled2json.html  webpack.config.js
js/: .babelrc  .gitignore  engine.js  package-lock.json  package.json  webpack.config.js
rust/: .gitignore  Cargo.toml  build.rs  windows-setup
rust/src/: error.rs  lib.rs  main.rs
rust/src/camera/: mod.rs
rust/src/common/: create.rs  delete.rs  mod.rs  scene_member.rs
rust/src/engine/: audio.rs  canvas.rs  message.rs  mod.rs  model.rs  shape.rs  types.rs
rust/src/engine/actor/: mod.rs
rust/src/engine/util/: draw.rs  game.rs  mod.rs
rust/src/input/: keyboard.rs  mod.rs  mouse.rs  text.rs
rust/src/lifecycle/: mod.rs
rust/src/loading/: mod.rs
rust/src/model/: mod.rs
rust/src/model/shape/: dimen.rs  mod.rs  point.rs  rect.rs
rust/src/quit/: mod.rs
rust/src/scene/: mod.rs
rust/src/timing/: mod.rs
rust/src/util/: entity_factory.rs  mod.rs  scene.rs  system.rs
rust/src/visuals/: canvas.rs  color.rs  drawable.rs  font.rs  image.rs  mod.rs  system.rs  visuals.rs
rust/src/visuals/drawable/: effect.rs  item.rs  mod.rs
rust/src/visuals/drawable/builder/: attributer.rs  image.rs  mod.rs  point.rs  rect.rs  sprite.rs  text.rs
rust/src/visuals/sprite/: mod.rs
rust/src/visuals/system/: main_canvas.rs  mod.rs
rust/src/visuals/tile/: mod.rs  tile.rs  tile_grid.rs  tile_layers.rs  tile_set.rs
(+151 files in other folders)
