[package]
name = "game-engine"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
publish = false
build = "build.rs"
edition = "2018"

[lib]
name = "game_engine"
path = "src/lib.rs"

[features]
perf = []

[dependencies]
specs = "0.14"
shred = "0.7"
shred-derive = "0.5"
specs-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["image", "mixer", "ttf", "unsafe_textures"]
